--- a/Proxmox/tasks/instances/docker_lxc/code.yml
+++ b/Proxmox/tasks/instances/docker_lxc/code.yml
@@ -7,102 +7,152 @@
                 root: '{{ env.JARVIS_CONFIGS_DIR }}/{{ app_name }}'
                 local: '{{ instance.configs }}/{{ app_name }}'
 
-      - name: '{{ app_name | upper }}: Configure Directories'
-        file:
-            path: '{{ dir_item }}'
-            state: directory
-            mode: '0777'
-            owner: '{{ mapped_uid }}'
-            group: '{{ mapped_uid }}'
-            recurse: true
-        loop:
-            - '{{ config.root }}'
-            - '{{ config.root }}/data'
-            - '{{ config.root }}/data/User'
-        loop_control:
-            loop_var: dir_item
+      - name: '{{ app_name | upper }}: Check Health Endpoint'
+        uri:
+            url: 'http://{{ instance.ip }}:{{ env.JARVIS_SERVICES[app_name].port }}/healthz'
+            method: GET
+            status_code: 200
+            timeout: 2
+        register: code_health
+        failed_when: false
 
-      - name: '{{ app_name | upper }}: Create settings.json'
-        copy:
-            dest: '{{ config.root }}/data/User/settings.json'
-            content: |
-                {
-                    "workbench.colorTheme": "Material Theme Ocean High Contrast",
-                    "workbench.iconTheme": "material-icon-theme"
-                }
-            owner: '{{ mapped_uid }}'
-            group: '{{ mapped_uid }}'
-            mode: '0666'
+      - name: '{{ app_name | upper }}: Check Settings File'
+        stat:
+            path: '{{ config.local }}/data/User/settings.json'
+        register: code_settings_stat
 
-      - name: '{{ app_name | upper }}: Create docker-compose.yml'
-        copy:
-            dest: '{{ config.root }}/docker-compose.yml'
-            content: |-
-                services:
-                  {{ app_name }}:
-                    container_name: {{ app_name }}
-                    image: linuxserver/code-server:latest
-                    restart: unless-stopped
-                    environment:
-                      - TZ={{ env.JARVIS_TZ }}
-                      - PUID={{ docker_user }}
-                      - PGID={{ docker_user }}
-                      - PWA_APPNAME={{ env.JARVIS_BOT_NAME }} Code
-                      - DEFAULT_WORKSPACE=/AppConfigs
-                    ports:
-                      - "{{ env.JARVIS_SERVICES[app_name].port }}:8443"
-                    volumes:
-                      - {{ config.local }}/data:/config
-                      - /:/docker
-                      - {{ instance.configs }}:/AppConfigs
-                    healthcheck:
-                      test: ["CMD", "curl", "-f", "-k", "https://localhost:8443"]
-                      interval: 30s
-                      timeout: 10s
-                      retries: 3
-                      start_period: 60s
-                    logging:
-                      driver: "json-file"
-                      options:
-                        max-size: "10m"
-                        max-file: "3"
-            owner: '{{ mapped_uid }}'
-            group: '{{ mapped_uid }}'
-            mode: '0666'
+      - name: '{{ app_name | upper }}: Check Extensions File'
+        stat:
+            path: '{{ config.local }}/data/extensions/extensions.json'
+        register: code_extensions_stat
 
-      - name: '{{ app_name | upper }}: Force Directory Ownership'
-        command: chown -R {{ mapped_uid }}:{{ mapped_uid }} {{ config.root }}
-        changed_when: false
+      - name: '{{ app_name | upper }}: Validate Settings JSON'
+        slurp:
+            src: '{{ config.local }}/data/User/settings.json'
+        register: code_settings_content
+        when: code_settings_stat.stat.exists
+        failed_when: false
 
-      - name: '{{ app_name | upper }}: Cleanup Existing Container'
-        command: pct exec {{ id }} -- bash -c "docker rm -f {{ app_name }} 2>/dev/null || true"
-        changed_when: false
+      - name: '{{ app_name | upper }}: Validate Extensions JSON'
+        slurp:
+            src: '{{ config.local }}/data/extensions/extensions.json'
+        register: code_extensions_content
+        when: code_extensions_stat.stat.exists
+        failed_when: false
 
-      - name: '{{ app_name | upper }}: Start Docker Compose'
-        command: pct exec {{ id }} -- bash -c "cd {{ config.local }} && docker compose up -d"
-        register: code_compose
-        changed_when: "'Created' in code_compose.stderr or 'Recreated' in code_compose.stderr"
-
-      - name: '{{ app_name | upper }}: Wait for Service Ready'
-        wait_for:
-            host: '{{ instance.ip }}'
-            port: '{{ env.JARVIS_SERVICES[app_name].port }}'
-            delay: 5
-            timeout: 300
-
-      - name: '{{ app_name | upper }}: Install Extensions'
-        command: pct exec {{ id }} -- docker exec {{ app_name }} /app/code-server/bin/code-server --extensions-dir /config/extensions --user-data-dir /config/data {{ extensions | map('regex_replace', '^', '--install-extension ') | join(' ') }} --force
-        vars:
-            extensions:
-                - redhat.vscode-yaml
-                - foxundermoon.shell-format
-                - vira.vsc-vira-theme
-        ignore_errors: true
-
-      - name: '{{ app_name | upper }}: Restart Container'
-        command: pct exec {{ id }} -- docker restart {{ app_name }}
-        changed_when: false
-
+      - set_fact:
+            healthy:
+                app: '{{ (code_health.status | default(0)) == 200 }}'
+                config: "{{ code_settings_stat.stat.exists and (code_settings_content.content | default('') | b64decode | from_json | default(false)) and code_extensions_stat.stat.exists and (code_extensions_content.content | default('') | b64decode | from_json | default(false)) }}"
+      - debug:
+            msg:
+                - "{{ app_name | title }} App Status: {{ 'Healthy' if healthy.app else 'Unhealthy' }}"
+                - "{{ app_name | title }} Config Status: {{ 'Healthy' if healthy.config else 'Unhealthy' }}"
+      - block:
+            - name: '{{ app_name | upper }}: Configure Directories'
+              file:
+                  path: '{{ dir_item }}'
+                  state: directory
+                  mode: '0777'
+                  owner: '{{ mapped_uid }}'
+                  group: '{{ mapped_uid }}'
+                  recurse: true
+              loop:
+                  - '{{ config.root }}'
+                  - '{{ config.root }}/data'
+                  - '{{ config.root }}/data/User'
+              loop_control:
+                  loop_var: dir_item
+            - name: '{{ app_name | upper }}: Create settings.json'
+              copy:
+                  dest: '{{ config.root }}/data/User/settings.json'
+                  content: |
+                      {
+                          "workbench.colorTheme": "Vira Carbon High Contrast",
+                          "workbench.iconTheme": "vira-icons-carbon",
+                          "viraTheme.accent": "Vira"
+                      }
+                  owner: '{{ mapped_uid }}'
+                  group: '{{ mapped_uid }}'
+                  mode: '0666'
+            - name: '{{ app_name | upper }}: Force Directory Ownership'
+              command: chown -R {{ mapped_uid }}:{{ mapped_uid }} {{ config.root }}
+              changed_when: false
+        when: (not healthy.app) or (not healthy.config)
+      - block:
+            - name: '{{ app_name | upper }}: Create docker-compose.yml'
+              copy:
+                  dest: '{{ config.root }}/docker-compose.yml'
+                  content: |-
+                      services:
+                        {{ app_name }}:
+                          container_name: {{ app_name }}
+                          image: linuxserver/code-server:latest
+                          restart: unless-stopped
+                          environment:
+                            - TZ={{ env.JARVIS_TZ }}
+                            - PUID={{ docker_user }}
+                            - PGID={{ docker_user }}
+                            - PWA_APPNAME={{ env.JARVIS_BOT_NAME }} Code
+                            - DEFAULT_WORKSPACE=/AppConfigs
+                          ports:
+                            - "{{ env.JARVIS_SERVICES[app_name].port }}:8443"
+                          volumes:
+                            - {{ config.local }}/data:/config
+                            - /:/docker
+                            - {{ instance.configs }}:/AppConfigs
+                          healthcheck:
+                            test: ["CMD", "curl", "-f", "-k", "https://localhost:8443"]
+                            interval: 30s
+                            timeout: 10s
+                            retries: 3
+                            start_period: 60s
+                          logging:
+                            driver: "json-file"
+                            options:
+                              max-size: "10m"
+                              max-file: "3"
+                  owner: '{{ mapped_uid }}'
+                  group: '{{ mapped_uid }}'
+                  mode: '0666'
+            - name: '{{ app_name | upper }}: Cleanup Existing Container'
+              command: pct exec {{ id }} -- bash -c "docker rm -f {{ app_name }} 2>/dev/null || true"
+              changed_when: false
+            - name: '{{ app_name | upper }}: Start Docker Compose'
+              command: pct exec {{ id }} -- bash -c "cd {{ config.local }} && docker compose up -d"
+              register: code_compose
+              changed_when: "'Created' in code_compose.stderr or 'Recreated' in code_compose.stderr"
+            - name: '{{ app_name | upper }}: Wait for Service Ready'
+              wait_for:
+                  host: '{{ instance.ip }}'
+                  port: '{{ env.JARVIS_SERVICES[app_name].port }}'
+                  delay: 5
+                  timeout: 300
+            - name: '{{ app_name | upper }}: Install Extensions'
+              command: pct exec {{ id }} -- docker exec {{ app_name }} /app/code-server/bin/code-server --extensions-dir /config/extensions --user-data-dir /config/data {{ extensions | map('regex_replace', '^', '--install-extension ') | join(' ') }} --force
+              vars:
+                  extensions:
+                      - redhat.vscode-yaml
+                      - foxundermoon.shell-format
+                      - vira.vsc-vira-theme
+              ignore_errors: true
+            - name: '{{ app_name | upper }}: Restart Container'
+              command: pct exec {{ id }} -- docker restart {{ app_name }}
+              changed_when: false
+        when: not healthy.app
+      - block:
+            - name: '{{ app_name | upper }}: Install Extensions (Update)'
+              command: pct exec {{ id }} -- docker exec {{ app_name }} /app/code-server/bin/code-server --extensions-dir /config/extensions --user-data-dir /config/data {{ extensions | map('regex_replace', '^', '--install-extension ') | join(' ') }} --force
+              vars:
+                  extensions:
+                      - redhat.vscode-yaml
+                      - foxundermoon.shell-format
+                      - vira.vsc-vira-theme
+              ignore_errors: true
+            - name: '{{ app_name | upper }}: Restart for Config Update'
+              command: pct exec {{ id }} -- docker restart {{ app_name }}
+              changed_when: true
+        when: healthy.app and (not healthy.config)
   rescue:
       - debug:
             msg: '{{ app_name }} failed to deploy'
