--- a/Proxmox/tasks/instances/docker_lxc/voidauth.yml
+++ b/Proxmox/tasks/instances/docker_lxc/voidauth.yml
@@ -6,94 +6,104 @@
             config:
                 root: '{{ env.JARVIS_CONFIGS_DIR }}/{{ app_name }}'
                 local: '{{ instance.configs }}/{{ app_name }}'
-
-      - name: '{{ app_name | upper }}: Configure Directories'
-        file:
-            path: '{{ dir_item }}'
-            state: directory
-            mode: '0777'
-            owner: '{{ mapped_uid }}'
-            group: '{{ mapped_uid }}'
-            recurse: true
-        loop:
-            - '{{ config.root }}'
-            - '{{ config.root }}/data'
-        loop_control:
-            loop_var: dir_item
-
-      - name: '{{ app_name | upper }}: Create docker-compose.yml'
-        copy:
-            dest: '{{ config.root }}/docker-compose.yml'
-            content: |-
-                services:
-                  {{ app_name }}:
-                    container_name: {{ app_name }}
-                    image: voidauth/voidauth:latest
-                    restart: unless-stopped
-                    ports:
-                      - {{ env.JARVIS_SERVICES[app_name].port }}:3000
-                    volumes:
-                      - {{ config.local }}:/app/config
-                      - {{ config.local }}/data:/app/db
-                    environment:
-                      - APP_URL=https://auth.{{ env.JARVIS_DOMAIN }}
-                      - APP_TITLE={{ env.JARVIS_BOT_NAME }} Auth
-                      - APP_COLOR=#6366f1
-                      - STORAGE_KEY={{ env.JARVIS_VOIDAUTH_STORAGE_KEY }}
-                      - DB_ADAPTER=sqlite
-                      - DEFAULT_REDIRECT=https://{{ env.JARVIS_DOMAIN }}
-                      - SMTP_HOST=smtp.gmail.com
-                      - SMTP_PORT=587
-                      - SMTP_USER={{ env.JARVIS_BOT_EMAIL }}
-                      - SMTP_PASS={{ env.JARVIS_AUTH_GOOGLE_APP_PASSWORD }}
-                      - SMTP_FROM="{{ env.JARVIS_BOT_NAME }} <{{ env.JARVIS_BOT_EMAIL }}>"
-                    healthcheck:
-                      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/health"]
-                      interval: 30s
-                      timeout: 10s
-                      retries: 3
-                      start_period: 60s
-                    logging:
-                      driver: "json-file"
-                      options:
-                        max-size: "10m"
-                        max-file: "3"
-            owner: '{{ mapped_uid }}'
-            group: '{{ mapped_uid }}'
-            mode: '0666'
-
-      - name: '{{ app_name | upper }}: Cleanup Existing Container'
-        command: pct exec {{ id }} -- bash -c "docker stop {{ app_name }} 2>/dev/null || true; docker rm {{ app_name }} 2>/dev/null || true"
-        changed_when: false
-
-      - name: '{{ app_name | upper }}: Start Docker Compose'
-        command: pct exec {{ id }} -- bash -c "cd {{ config.local }} && docker compose up -d"
-        register: auth_compose
-        changed_when: "'Created' in auth_compose.stderr or 'Recreated' in auth_compose.stderr"
-
-      - name: '{{ app_name | upper }}: Wait for Service Ready'
-        wait_for:
-            host: '{{ instance.ip }}'
-            port: '{{ env.JARVIS_SERVICES[app_name].port }}'
-            delay: 10
-            timeout: 120
-
-      - name: '{{ app_name | upper }}: Update Admin Credentials'
-        shell: >
-            pct exec {{ id }} -- sqlite {{ config.local }}/data/db.sqlite
-            "UPDATE user SET
-            username = '{{ env.JARVIS_ADMIN_USERNAME }}',
-            passwordHash = '{{ env.JARVIS_ADMIN_PASSWORD_ARGON | replace('$', '\$') }}',
-            email = '{{ env.JARVIS_ADMIN_EMAIL }}',
-            name = '{{ env.JARVIS_ADMIN_NAME }}',
-            emailVerified = 1
-            WHERE username = 'auth_admin' OR username = '{{ env.JARVIS_ADMIN_USERNAME }}';"
-        changed_when: false
-
-      - name: '{{ app_name | upper }}: Restart VoidAuth'
-        shell: pct exec {{ id }} -- docker restart {{ app_name }}
-        changed_when: false
-
+      - name: '{{ app_name | upper }}: Check Health Endpoint'
+        uri:
+            url: 'http://{{ instance.ip }}:{{ env.JARVIS_SERVICES[app_name].port }}/health'
+            method: GET
+            status_code: 200
+            timeout: 2
+        register: voidauth_health
+        failed_when: false
+      - set_fact:
+            healthy:
+                app: '{{ (voidauth_health.status | default(0)) == 200 }}'
+                config: true
+      - debug:
+            msg:
+                - "{{ app_name | title }} App Status: {{ 'Healthy' if healthy.app else 'Unhealthy' }}"
+                - "{{ app_name | title }} Config Status: {{ 'Healthy' if healthy.config else 'Unhealthy' }}"
+      - block:
+            - name: '{{ app_name | upper }}: Configure Directories'
+              file:
+                  path: '{{ dir_item }}'
+                  state: directory
+                  mode: '0777'
+                  owner: '{{ mapped_uid }}'
+                  group: '{{ mapped_uid }}'
+                  recurse: true
+              loop:
+                  - '{{ config.root }}'
+                  - '{{ config.root }}/data'
+              loop_control:
+                  loop_var: dir_item
+            - name: '{{ app_name | upper }}: Create docker-compose.yml'
+              copy:
+                  dest: '{{ config.root }}/docker-compose.yml'
+                  content: |-
+                      services:
+                        {{ app_name }}:
+                          container_name: {{ app_name }}
+                          image: voidauth/voidauth:latest
+                          restart: unless-stopped
+                          ports:
+                            - {{ env.JARVIS_SERVICES[app_name].port }}:3000
+                          volumes:
+                            - {{ config.local }}:/app/config
+                            - {{ config.local }}/data:/app/db
+                          environment:
+                            - APP_URL=https://auth.{{ env.JARVIS_DOMAIN }}
+                            - APP_TITLE={{ env.JARVIS_BOT_NAME }} Auth
+                            - APP_COLOR=#6366f1
+                            - STORAGE_KEY={{ env.JARVIS_VOIDAUTH_STORAGE_KEY }}
+                            - DB_ADAPTER=sqlite
+                            - DEFAULT_REDIRECT=https://{{ env.JARVIS_DOMAIN }}
+                            - SMTP_HOST=smtp.gmail.com
+                            - SMTP_PORT=587
+                            - SMTP_USER={{ env.JARVIS_BOT_EMAIL }}
+                            - SMTP_PASS={{ env.JARVIS_AUTH_GOOGLE_APP_PASSWORD }}
+                            - SMTP_FROM="{{ env.JARVIS_BOT_NAME }} <{{ env.JARVIS_BOT_EMAIL }}>"
+                          healthcheck:
+                            test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/health"]
+                            interval: 30s
+                            timeout: 10s
+                            retries: 3
+                            start_period: 60s
+                          logging:
+                            driver: "json-file"
+                            options:
+                              max-size: "10m"
+                              max-file: "3"
+                  owner: '{{ mapped_uid }}'
+                  group: '{{ mapped_uid }}'
+                  mode: '0666'
+            - name: '{{ app_name | upper }}: Cleanup Existing Container'
+              command: pct exec {{ id }} -- bash -c "docker stop {{ app_name }} 2>/dev/null || true; docker rm {{ app_name }} 2>/dev/null || true"
+              changed_when: false
+            - name: '{{ app_name | upper }}: Start Docker Compose'
+              command: pct exec {{ id }} -- bash -c "cd {{ config.local }} && docker compose up -d"
+              register: auth_compose
+              changed_when: "'Created' in auth_compose.stderr or 'Recreated' in auth_compose.stderr"
+            - name: '{{ app_name | upper }}: Wait for Service Ready'
+              wait_for:
+                  host: '{{ instance.ip }}'
+                  port: '{{ env.JARVIS_SERVICES[app_name].port }}'
+                  delay: 10
+                  timeout: 120
+            - name: '{{ app_name | upper }}: Update Admin Credentials'
+              shell: >
+                  pct exec {{ id }} -- sqlite {{ config.local }}/data/db.sqlite
+                  "UPDATE user SET
+                  username = '{{ env.JARVIS_ADMIN_USERNAME }}',
+                  passwordHash = '{{ env.JARVIS_ADMIN_PASSWORD_ARGON | replace('$', '\$') }}',
+                  email = '{{ env.JARVIS_ADMIN_EMAIL }}',
+                  name = '{{ env.JARVIS_ADMIN_NAME }}',
+                  emailVerified = 1
+                  WHERE username = 'auth_admin' OR username = '{{ env.JARVIS_ADMIN_USERNAME }}';"
+              changed_when: false
+            - name: '{{ app_name | upper }}: Restart VoidAuth'
+              shell: pct exec {{ id }} -- docker restart {{ app_name }}
+              changed_when: false
+        when: not healthy.app
   rescue:
       - debug:
             msg: '{{ app_name }} failed to deploy'
